# DecentralizedHealthcareBackend

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt
.github/workflows/: build-frontend.yml  django.yml  jekyll-gh-pages.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/brownie/: brownie-config.yaml
backend/brownie/contracts/: PrivacyShieldDataset.sol
backend/brownie/tests/: PrivacyShieldDataset_test.py  utils.py
backend/scripts/: entrypoint.sh  init_luce_registry.py  init_postgres.sh  simulator.py
backend/src/luce/accounts/: serializers.py  views.py
backend/src/luce/accounts/migrations/: 0001_initial.py
backend/src/luce/blockchain/: models.py
backend/src/luce/healthcare/: views.py
backend/src/luce/lucehome/: settings.py  urls.py
backend/src/luce/utils/: web3_scripts.py
backend/src/luce/utils/fixtures/: demo_users.json
docs/: LUCE Development tips.md  README.MD  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/accounts/: models.html
docs/_modules/healthcare/: views.html
docs/_sources/: index.rst.txt
docs/source/: accounts.rst  blockchain.rst  conf.py  modules.rst  privacy.rst
frontend/: App.js  Dockerfile  README.md  app.json  babel.config.js  package-lock.json  package.json
frontend/src/api/: api-doc.md
frontend/src/pages/: dataset.jsx  login.jsx  page_config.json  provider.jsx  register.jsx  requester.jsx  role.jsx
frontend/src/utils/: DHModal.jsx  dh-button.jsx  request.js  style-sheet.jsx
jupyter/: ConsentHierarchicalData.ipynb  UnifiedConsentModel.ipynb  VikasContractTest.ipynb
jupyter/data/: ConsentCode2.sol  UnifiedConsentModel.sol  countries.csv  countries.json  countries.jsonl  countries_enrich.json  country-codes.jsonl  group_index.json
luce_vm/: Vagrantfile
luce_vm/brownie/: brownie-config.yaml
luce_vm/brownie/contracts/: Commitment.sol  ConsentCode.sol  DataSet.sol  Main.sol
luce_vm/brownie/scripts/: deploy_LUCERegistry.py
luce_vm/brownie/tests/: Commitment_test.py  utils.py
luce_vm/js/: Dockerfile  package-lock.json  package.json
luce_vm/js/circuits/: commitment.circom
luce_vm/js/src/: claim.js
luce_vm/js/src/koa/: koa.js
luce_vm/jupyter/: 1) Web3 Examples.ipynb  ConsentHierarchicalData.ipynb  Untitled.ipynb  VikasContractTest.ipynb
luce_vm/jupyter/data/: ConsentCodeNew.sol  ConsentCodeOld.sol  ConsentHierarchyData.sol  Main.sol
luce_vm/luce_django/django_binary_db_field/utils/: web3_scripts.py
luce_vm/luce_django/luce/: 2014_10_04-06_08_25_RR.csv  QmbXADsP1AM1JBfmhuo24SYz2qtmth2a7TKagBs1BbjN1E  requirements.txt  small.txt  tempfile.csv
luce_vm/luce_django/luce/API/: admin.py  models.py  views.py
luce_vm/luce_django/luce/accounts/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
luce_vm/luce_django/luce/blockchain/: apps.py  models.py  singleton.py
luce_vm/luce_django/luce/docs/: conf.py  index.rst
luce_vm/luce_django/luce/healthcare/: tests.py  urls.py  views.py
luce_vm/luce_django/luce/lucehome/: serializers.py  settings.py  settings_psql.py  test.py  urls.py  views.py
luce_vm/luce_django/luce/luceview/: apps.py  serializers.py  tests.py  views.py
luce_vm/luce_django/luce/monetization/: asgi.py  settings.py  urls.py  wsgi.py
luce_vm/scripts/: bootstrap_custom_lucevm.sh  entrypoint.sh  ganache_start.sh  geth_start.sh  init_luce.py  install_IPFS.sh  install_dependencies.sh  install_geth.sh  start_IPFS.sh  start_servers.sh  start_servers_psql.sh  test_import_brownie.py
luce_vm/scripts/simulation/: faked_data.json  generate_user.py  main.py  mimic_consent_codes.py  simulation_strategy.py  simulator.py  simulator1.py
manual/: LUCE Development tips.MD  understanding the login related process.md
notebooks/: VikasContractTest-Copy1.ipynb
(+34 files in other folders)
